CSS: color contrast fix

--- a/Scrimba_Projects/react_travel_journal/src/style.css
+++ b/Scrimba_Projects/react_travel_journal/src/style.css
@@ -1,6 +1,6 @@
 :root {
   --white: #fff;
-  --accent: #3DCCC7;
+  --accent: #284F4D;
   --bg: #F5F7FB;
   --gray: #525154;
   --black: #2B283A;
